# audio-artifacts-classification

./: .gitignore  README.md  config.yml  dataset.dvc  environment.yml  pyproject.toml  requirements.txt  requirements_ci.txt
.github/workflows/: retrain.yml  run_ruff.yml  run_tests.yml
audio_artifacts/: config.yml
audio_artifacts/src/: classifier_module.py  config.py  dataset.py  evaluate.py  main.py  train.py  utils.py
audio_artifacts/src/models/: common_architecture.py  resnet.py  wavegram.py
audio_artifacts/tests/: test_classifier_module.py  test_dataset.py  test_utils.py
scripts/: conversion_to_onnx.py  sweep.yml  sweep_job.py  train.yml  training_testing_job.py  upload_dataset.py  upload_dataset.yml  upload_endpoint.py  upload_environment.py  upload_environment.yml
src/: classifier_module.py  config.py  dataset.py  main.py  train.py  utils.py
src/models/: common_architecture.py  resnet.py  wavegram.py
tests/: test_classifier_module.py  test_dataset.py
